Bug 248031 - weird activation of feedback icons when sending a comment using "Send a Comment…"
Summary: weird activation of feedback icons when sending a comment using "Send a Comme...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: LikeBack (other bugs)
Version First Reported In: 2.3.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: 2.4.0
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-16 09:37 UTC by Robert Riemann
Modified: 2011-06-05 17:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Riemann 2010-08-16 09:37:14 UTC
Version:           2.3.1 (using KDE 4.4.95) 
OS:                Linux

Hi amarok,

I have disabled these feedback buttons. When i was sending you a comment,
a confirmation-popup poped up. I wonder why this popup got these feedback icons.
- I disabled them. So i do not expect them at all
- I have already sent a comment. Why asking again for feedback so close after the comment?

I closed the popup. Then I noticed that tha amarok main window got these feedback buttons, too. I went to the help menu to find out, that the checkbox for these buttons wasn't checked. Seems to be out of sync with the status itself.

Can someone confirm this behavior?

Best regards,
Robert

Reproducible: Didn't try




OS: Linux (x86_64) release 2.6.35-rc6-16-desktop
Compiler: gcc
Comment 1 Teo Mrnjavac 2010-08-16 11:08:19 UTC
Confirmed.
Comment 2 Kevin Funk 2011-06-05 12:57:56 UTC
*Bump* Teo, can you fix this behavior?
Comment 3 Teo Mrnjavac 2011-06-05 17:18:38 UTC
Git commit 5c2a5852fe31e1db142a1b709ffb1e9fb4b1a217 by Teo Mrnjavac.
Committed on 05/06/2011 at 17:13.
Pushed by mrnjavac into branch 'master'.

Fixed bug with the LikeBack reappearing even if disabled.

Even if the LikeBack icons in the top right of every window were
disabled, they used to reappear after reporting an issue because of poor
logic with a signal/slot connection.
BUG: 248031
FIXED-IN: 2.4.2
CCMAIL: apachelogger@ubuntu.com

M  +8    -8    src/likeback/LikeBack.cpp     

http://commits.kde.org/amarok/5c2a5852fe31e1db142a1b709ffb1e9fb4b1a217