Fixed bug with the LikeBack reappearing even if disabled.

Even if the LikeBack icons in the top right of every window were
disabled, they used to reappear after reporting an issue because of poor
logic with a signal/slot connection.
BUG: 248031
FIXED-IN: 2.4.2
CCMAIL: apachelogger@ubuntu.com